website-backend/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  tls:
  - hosts:
    - alterai.pl
    secretName: alterai-pl-tls
  rules:
  - host: alterai.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
